# aurum-control

./: Cargo.toml  README.md
.github/workflows/: ci.yml
docs/devices/: pioneer-ddj-flx4.md
profiles/: pioneer-ddj-flx4.ron
src/: feedback.rs  harness.rs  highres.rs  jog.rs  lib.rs  mapping.rs  message.rs  monitor.rs  profile.rs  profiles.rs  relative.rs
src/harness/: index.html
