[package]
name = "aurum-control"
version = "0.1.0"
edition = "2021"
description = "AURUM: device- and engine-agnostic DJ controller logic (MIDI parse, mapping, profiles, jog, feedback)."
license = "MIT"

[lib]
name = "midi"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
